--- a/pipe/Makefile.am
+++ b/pipe/Makefile.am
@@ -1,4 +1,4 @@
 AUTOMAKE_OPTIONS=foreign
-bin_PROGRAMS = pipe
-pipe_SOURCES = pipe.c ../sys/debug.c ../sys/debug.h
-pipe_CPPFLAGS = -DDEBUG
+bin_PROGRAMS = execpipe
+execpipe_SOURCES = pipe.c ../sys/debug.c ../sys/debug.h
+execpipe_CPPFLAGS = -DDEBUG
