--- a/xsi_messages/Makefile.am
+++ b/xsi_messages/Makefile.am
@@ -1,4 +1,4 @@
 AUTOMAKE_OPTIONS=foreign
-bin_PROGRAMS = xsi_messages
-xsi_messages_SOURCES = xsi_messages.c ../sys/debug.c ../sys/debug.h
-xsi_messages_CPPFLAGS = -DDEBUG
+bin_PROGRAMS = execxsimessages
+execxsimessages_SOURCES = xsi_messages.c ../sys/debug.c ../sys/debug.h
+execxsimessages_CPPFLAGS = -DDEBUG
