--- a/named_pipe/Makefile.am
+++ b/named_pipe/Makefile.am
@@ -1,5 +1,5 @@
 AUTOMAKE_OPTIONS=foreign
-bin_PROGRAMS = named_pipe
-named_pipe_SOURCES = named_pipe.c ../sys/debug.c ../sys/debug.h
-named_pipe_CPPFLAGS = -DDEBUG
+bin_PROGRAMS = execnamedpipe
+execnamedpipe_SOURCES = named_pipe.c ../sys/debug.c ../sys/debug.h
+execnamedpipe_CPPFLAGS = -DDEBUG
 
