--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ACLOCAL_AMFLAGS = -I m4 --install
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = pipe named_pipe xsi_messages
+SUBDIRS = pipe named_pipe xsi_messages xsi_shared_memory
 EXTRA_DIST = m4/NOTES
 
